--- a/Slides/l1-1.tex
+++ b/Slides/l1-1.tex
@@ -1,7 +1,7 @@
 \documentclass[professionalfonts]{beamer}
 \newif\ifanswers
-%\answerstrue % comment out to hide answers
-\answersfalse
+\answerstrue % comment out to hide answers
+%\answersfalse
 \input{mycommands.sty}
 \ifanswers
 \title{Algoritmi Numerici (Parte I)}
